--- a/Mutex_RAII_Cpp_Pimpl/CMakeLists.txt
+++ b/Mutex_RAII_Cpp_Pimpl/CMakeLists.txt
@@ -8,7 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(Threads REQUIRED)
+add_subdirectory(src/amutex)
 
 add_executable(${ProjectName})
-target_sources(${ProjectName}  PUBLIC  src/main.cpp src/amutex.cpp)
-target_link_libraries( ${ProjectName} ${CMAKE_THREAD_LIBS_INIT} )
+target_sources(${ProjectName}  PUBLIC  src/main.cpp)
+target_link_libraries( ${ProjectName} ${CMAKE_THREAD_LIBS_INIT} amutex)
