--- a/Mutex_RAII_Cpp_Pimpl/.vscode/settings.json
+++ b/Mutex_RAII_Cpp_Pimpl/.vscode/settings.json
@@ -56,6 +56,15 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "charconv": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "span": "cpp",
+        "stop_token": "cpp",
+        "variant": "cpp",
+        "format": "cpp"
     }
 }
